@@ -1,5 +1,11 @@
 2004-12-27  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/PlaylistWindow.cs:
+
+	Clean up last EOS handling.
+
+2004-12-27  Jorn Baayen  <jbaayen@gnome.org>
+
 	* libmuine/player-gst.c: (player_set_file):
 	* libmuine/player-xine.c: (player_set_file):
 
